<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="382dp"
        android:layout_height="54dp"
        android:text="@string/apptitle"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="287dp"
        android:layout_height="39dp"
        android:text="@string/destinationprompt"
        android:textColor="@color/white"
        android:textSize="@dimen/promptsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.025" />

    <Spinner
        android:id="@+id/userdestination"
        android:layout_width="195dp"
        android:layout_height="47dp"
        android:background="@color/white"
        android:entries="@array/destinations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="276dp"
        android:layout_height="78dp"
        android:background="@drawable/booktripbtn"
        android:onClick="getuserinput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <TextView
        android:id="@+id/userinput"
        android:layout_width="345dp"
        android:layout_height="66dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />

    <RadioGroup
        android:id="@+id/tripduration"
        android:layout_width="384dp"
        android:layout_height="63dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454">

        <RadioButton
            android:id="@+id/fourdays"
            android:layout_width="92dp"
            android:layout_height="60dp"
            android:buttonTint="#DF2121"
            android:text="@string/fourdays"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/oneweek"
            android:layout_width="92dp"
            android:layout_height="60dp"
            android:buttonTint="#DF2121"
            android:text="@string/oneweek"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/twoweeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#DF2121"
            android:text="@string/twoweeks"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/onemonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#DF2121"
            android:text="@string/onemonth"
            android:textColor="@color/white" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="173dp"
        android:layout_height="44dp"
        android:text="@string/packageprompt"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <RadioGroup
        android:id="@+id/packages"
        android:layout_width="375dp"
        android:layout_height="68dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602">

        <RadioButton
            android:id="@+id/standard"
            android:layout_width="123dp"
            android:layout_height="match_parent"
            android:buttonTint="#DF2121"
            android:text="@string/standardrb"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/deluxe"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:buttonTint="#DF2121"
            android:text="@string/deluxerb"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/firstclass"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:buttonTint="#DF2121"
            android:text="@string/firstclassrb"
            android:textColor="@color/white" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:text="@string/durationprompt"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="210dp"
        android:layout_height="49dp"
        android:text="@string/modeoftravelprompt"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <CheckBox
        android:id="@+id/air"
        android:layout_width="92dp"
        android:layout_height="46dp"
        android:buttonTint="#DF2121"
        android:text="@string/chbxair"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <CheckBox
        android:id="@+id/airandwater"
        android:layout_width="124dp"
        android:layout_height="45dp"
        android:buttonTint="#DF2121"
        android:text="@string/chbxairandwater"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:backgroundTint="#DF2121"
        android:text="@string/moredetails"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="176dp"
        android:layout_height="259dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222"
        app:srcCompat="@drawable/appimg" />

</androidx.constraintlayout.widget.ConstraintLayout>